--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@babel/types": "^7.18.10",
     "@lezer/generator": "^1.0.0",
     "@vitejs/plugin-vue": "^3.0.3",
+    "naive-ui": "^2.41.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vue-tsc": "^1.8.27"
