--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@codemirror/lang-go": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.3",
     "@lezer/lr": "^1.0.0",
+    "@uiw/codemirror-themes": "^4.23.10",
     "codemirror": "^6.0.1",
     "vue": "^3.2.37",
     "vue-codemirror6": "^1.3.12"
